--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ dist
 .tern-port
 backend/__pycache__
 backend/.idea
+frontend/api/services/who-done-it-298503-firebase-adminsdk-y119a-a1609ce38f.json
