--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "start": "concurrently \"cd api && node index.js\" \"react-scripts start\"",
+    "yeet": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
