--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ dist
 backend/__pycache__
 backend/.idea
 frontend/api/services/who-done-it-298503-firebase-adminsdk-y119a-a1609ce38f.json
+backend/who-done-it-298503-a9a988f9f164.json
